renamed targetDir to sourceDir

--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,6 @@ inputs:
   s3Bucket:
     description: The S3 Bucket
     required: true
-  targetDir:
+  sourceDir:
     description: Target Directory
     required: true
