GL-2000 updated to use composite action

--- a/action.yml
+++ b/action.yml
@@ -3,9 +3,6 @@ description: A GitHub action to store test results in S3
 branding:
   icon: check-circle
   color: green
-runs:
-  using: docker
-  image: Dockerfile
 inputs:
   s3Bucket:
     description: The S3 Bucket
@@ -13,3 +10,33 @@ inputs:
   sourceDir:
     description: Target Directory
     required: true
+
+runs:
+  using: 'composite'
+  steps:
+    - name: "Save Test Results"
+      shell: bash
+      run: |        
+        REPO_SLUG=$(basename $(git config --get remote.origin.url) | cut -d'.' -f1)
+        COMMIT_HASH=$(git rev-parse HEAD)
+        COMMIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+        S3_BUCKET="s3://${{ inputs.s3Bucket }}"
+        S3_BRANCH_PATH="$S3_BUCKET/$REPO_SLUG/$COMMIT_BRANCH"
+
+        [ -d "${{ inputs.sourceDir }}/databases" ] && rm -rf "${{ inputs.sourceDir }}/databases"
+        git log -1 > "${{ inputs.sourceDir }}/git-status.txt"
+
+        echo "$S3_BRANCH_PATH/$COMMIT_HASH" > "${{ inputs.sourceDir }}/s3-path.txt"
+        echo "Uploading to $S3_BRANCH_PATH/$COMMIT_HASH"
+        aws s3 sync --only-show-errors --delete --acl=public-read "./${{ inputs.sourceDir }}" "$S3_BRANCH_PATH/$COMMIT_HASH" && \
+
+        # releases/sandbox/gl-123        -> releases/sandbox/gl-123/latest
+        # releases/production/2020-01-01 -> releases/production/latest
+        # releases/staging/2020-01-01    -> releases/staging/latest
+        [[ "$COMMIT_BRANCH" =~ ^releases/(staging|production) ]] \
+            && LATEST_PATH="$(dirname "$S3_BRANCH_PATH")/latest" \
+            || LATEST_PATH="$S3_BRANCH_PATH/latest"
+
+        echo "Updating $LATEST_PATH"
+        aws s3 sync --only-show-errors --delete --acl=public-read "$S3_BRANCH_PATH/$COMMIT_HASH" "$LATEST_PATH"
+
